fixed join code bug where the box was clipping into the logo

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -21,3 +21,7 @@ code {
     text-align: center;
     line-height: initial!important;
 }
+
+#box input[type='text']{
+  margin-top: 40px;
+}
